<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_carta"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/menu_carta" />
        <item
            android:id="@+id/nav_combos"
            android:icon="@drawable/ic_baseline_local_pizza_24"
            android:title="@string/menu_combos" />
        <item
            android:id="@+id/nav_restaurantes"
            android:icon="@drawable/ic_baseline_location_city_24"
            android:title="@string/menu_restaurantes" />
    </group>
</menu>