<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.grupo4.quickmeal_v28_def.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_carta"
        android:name="com.grupo4.quickmeal_v28_def.ui.carta.CartaFragment"
        android:label="@string/menu_carta"
        tools:layout="@layout/fragment_carta" />

    <fragment
        android:id="@+id/nav_combos"
        android:name="com.grupo4.quickmeal_v28_def.ui.combos.CombosFragment"
        android:label="@string/menu_combos"
        tools:layout="@layout/fragment_combos" />
    <fragment
        android:id="@+id/nav_restaurantes"
        android:name="com.grupo4.quickmeal_v28_def.ui.restaurantes.RestaurantesFragment"
        android:label="fragment_restaurantes"
        tools:layout="@layout/fragment_restaurantes" />
</navigation>