<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">


        <ImageView
            android:id="@+id/imageRest"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRestId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtRestId"
                android:layout_weight="1"
                android:fontFamily="@font/caveatvariablefontwght"
                android:textAlignment="center"
                android:textColor="@color/rojo"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/txtRestRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtRestRestaurante"
                android:layout_weight="1"
                android:fontFamily="@font/caveatvariablefontwght"
                android:textAlignment="center"
                android:textColor="@color/rojo"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtRestDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtRestDireccion"
                android:layout_weight="1"
                android:fontFamily="@font/caveatvariablefontwght"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtRestLocacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtRestLocacion"
                android:layout_weight="1"
                android:fontFamily="@font/caveatvariablefontwght"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>